<resources>
    <string name="app_name">MarvelAllies</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Characters">Characters</string>
    <string name="Name">Name</string>
    <string name="Players">Players</string>
    <string name="Score">Score</string>
    <string name="Rank">Rank</string>
    <string name="TimeStats">Time Stats</string>
    <string name="TimePlayed">Time Played</string>
    <string name="Matches">Matches</string>
    <string name="RoleStats">Role Stats</string>
    <string name="Vanguard">Vanguard</string>
    <string name="Duelist">Duelist</string>
    <string name="Strategist">Strategist</string>
    <string name="OverallStats">Overall Stats</string>
    <string name="KDA">KDA</string>
    <string name="KD">KD</string>
    <string name="MVP">MVP</string>
    <string name="Profile">Profile</string>
    <string name="Edit_Profile">Edit Profile</string>
    <string name="Sign_out">Sign out</string>
    <string name="News">News</string>
    <string name="Search">Search</string>
    <string name="Forum">Forum</string>
    <string name="ExitApp">Exit App</string>
    <string name="Requests">Too many requests, try later</string>
    <string name="Private">This profile is private</string>
    <string name="APIError">There has been a problem accesing the API</string>


</resources>