<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PlayersProfile" >

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleX="0.2"
        android:scaleY="0.2"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/PlayerImage"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:paddingTop="10dp"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/NamePlayer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:text="TextView"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/UidPlayer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:text="TextView"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/DataLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/RankTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_medium"
                            android:gravity="center"
                            android:text="@string/Rank"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:background="?attr/android:textColorSecondary"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/Rank"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/roboto_medium"
                                android:gravity="center"
                                android:paddingTop="10dp"
                                android:text="@string/Rank"
                                android:textColor="@color/white"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/RankText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/roboto_medium"
                                android:gravity="center"
                                android:paddingTop="10dp"
                                android:text="TextView"
                                android:textColor="@color/white"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/Score"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/roboto_medium"
                                android:gravity="center"
                                android:paddingTop="10dp"
                                android:text="@string/Score"
                                android:textColor="@color/white"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/ScoreText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/roboto_medium"
                                android:gravity="center"
                                android:paddingTop="10dp"
                                android:paddingBottom="10dp"
                                android:text="TextView"
                                android:textColor="@color/white"
                                android:textSize="16sp" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/TimeTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_medium"
                            android:gravity="center"
                            android:text="@string/TimeStats"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:background="?attr/android:textColorSecondary"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/TimePlayed"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/roboto_medium"
                                android:gravity="center"
                                android:paddingTop="10dp"
                                android:text="@string/TimePlayed"
                                android:textColor="@color/white"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/TimeText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/roboto_medium"
                                android:gravity="center"
                                android:paddingTop="10dp"
                                android:text="TextView"
                                android:textColor="@color/white"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/Matches"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/roboto_medium"
                                android:gravity="center"
                                android:paddingTop="10dp"
                                android:text="@string/Matches"
                                android:textColor="@color/white"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/MatchesText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/roboto_medium"
                                android:gravity="center"
                                android:paddingTop="10dp"
                                android:paddingBottom="10dp"
                                android:text="TextView"
                                android:textColor="@color/white"
                                android:textSize="16sp" />
                        </LinearLayout>
                    </LinearLayout>


                </LinearLayout>

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center"
                    android:text="@string/RoleStats"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/VanguardText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:background="?attr/android:textColorSecondary"
                        android:padding="10dp"
                        android:text="@string/Vanguard"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/DuelistText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:background="?attr/android:textColorSecondary"
                        android:padding="10dp"
                        android:text="@string/Duelist"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/StrategistText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:background="?attr/android:textColorSecondary"
                        android:padding="10dp"
                        android:text="@string/Strategist"
                        android:textColor="@color/white" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center"
                    android:text="@string/OverallStats"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/KdaText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:background="?attr/android:textColorSecondary"
                        android:padding="10dp"
                        android:text="@string/KDA"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/KdText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:background="?attr/android:textColorSecondary"
                        android:padding="10dp"
                        android:text="@string/KD"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/MvpText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:background="?attr/android:textColorSecondary"
                        android:padding="10dp"
                        android:text="@string/MVP"
                        android:textColor="@color/white" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>